tests/baselines/reference/typeReferenceDirectives8.errors.txt
/mod1.ts(1,1): error TS18055: Declaration file contains synthesized type reference directives: '"lib"'
/mod2.ts(1,1): error TS18055: Declaration file contains synthesized type reference directives: '"lib"'


==== /mod2.ts (1 errors) ====
    import {foo} from "./mod1";
    ~~~~~~
!!! error TS18055: Declaration file contains synthesized type reference directives: '"lib"'
    export const bar = foo();
==== /types/lib/index.d.ts (0 errors) ====
    interface Lib { x }
    
==== /mod1.ts (1 errors) ====
    export function foo(): Lib { return {x: 1} }
    ~~~~~~
!!! error TS18055: Declaration file contains synthesized type reference directives: '"lib"'
    